--- a/data/ui/MenulibreWindow.ui
+++ b/data/ui/MenulibreWindow.ui
@@ -302,6 +302,13 @@ See http://standards.freedesktop.org/desktop-entry-spec/latest/ar01s07.html for 
       </object>
     </child>
   </object>
+  <object class="GtkImage" id="image1">
+    <property name="visible">True</property>
+    <property name="can_focus">False</property>
+    <property name="pixel_size">16</property>
+    <property name="icon_name">media-playback-start-symbolic</property>
+    <property name="use_fallback">True</property>
+  </object>
   <object class="GtkImage" id="image10">
     <property name="visible">True</property>
     <property name="can_focus">False</property>
@@ -504,7 +511,7 @@ See http://standards.freedesktop.org/desktop-entry-spec/latest/ar01s07.html for 
                       <packing>
                         <property name="expand">False</property>
                         <property name="fill">True</property>
-                        <property name="position">1</property>
+                        <property name="position">0</property>
                       </packing>
                     </child>
                     <child>
@@ -549,7 +556,7 @@ See http://standards.freedesktop.org/desktop-entry-spec/latest/ar01s07.html for 
                       <packing>
                         <property name="expand">False</property>
                         <property name="fill">True</property>
-                        <property name="position">2</property>
+                        <property name="position">1</property>
                       </packing>
                     </child>
                     <child>
@@ -560,6 +567,22 @@ See http://standards.freedesktop.org/desktop-entry-spec/latest/ar01s07.html for 
                         <property name="receives_default">True</property>
                         <property name="tooltip_text" translatable="yes">Revert</property>
                         <property name="image">image9</property>
+                      </object>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">True</property>
+                        <property name="position">2</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <object class="GtkButton" id="toolbar_execute">
+                        <property name="visible">True</property>
+                        <property name="sensitive">False</property>
+                        <property name="can_focus">True</property>
+                        <property name="receives_default">True</property>
+                        <property name="tooltip_text" translatable="yes">Test Launcher</property>
+                        <property name="image">image1</property>
+                        <property name="always_show_image">True</property>
                       </object>
                       <packing>
                         <property name="expand">False</property>
