--- a/data/ui/MenulibreWindow.ui
+++ b/data/ui/MenulibreWindow.ui
@@ -64,7 +64,7 @@
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="tooltip_text" translatable="yes">A list of environments that should not display this entry. You can only use this key if "OnlyShowIn" is not set.
-Possible values include: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, XFCE, Old</property>
+Possible values include: Cinnamon, EDE, GNOME, KDE, LXDE, LXQt, MATE, Pantheon, Razor, ROX, TDE, Unity, XFCE, Old</property>
                 <property name="label" translatable="yes">Not Shown In</property>
                 <property name="xalign">0</property>
               </object>
@@ -78,7 +78,7 @@ Possible values include: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, XFCE, O
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="tooltip_text" translatable="yes">A list of environments that should display this entry. Other environments will not display this entry. You can only use this key if "NotShowIn" is not set.
-Possible values include: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, XFCE, Old</property>
+Possible values include: Cinnamon, EDE, GNOME, KDE, LXDE, LXQt, MATE, Pantheon, Razor, ROX, TDE, Unity, XFCE, Old</property>
                 <property name="label" translatable="yes">Only Shown In</property>
                 <property name="xalign">0</property>
               </object>
