--- a/data/ui/MenulibreWindow.ui
+++ b/data/ui/MenulibreWindow.ui
@@ -2024,6 +2024,8 @@ Possible values include: Budgie, Cinnamon, EDE, GNOME, KDE, LXDE, LXQt, MATE, Pa
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="invisible_char">•</property>
+                <property name="secondary_icon_name">edit-find-symbolic</property>
+                <property name="secondary_icon_tooltip_text" translatable="yes">Identify Window</property>
               </object>
               <packing>
                 <property name="left_attach">1</property>
