--- a/data/ui/MenulibreWindow.ui
+++ b/data/ui/MenulibreWindow.ui
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.20.0 -->
+<!-- Generated with glade 3.22.2 -->
 <interface>
   <requires lib="gtk+" version="3.10"/>
   <object class="GtkMenu" id="add_popup_menu">
@@ -248,6 +248,9 @@
     <property name="window_position">center</property>
     <property name="default_height">600</property>
     <property name="icon_name">menulibre</property>
+    <child type="titlebar">
+      <placeholder/>
+    </child>
     <child>
       <object class="GtkBox" id="box1">
         <property name="visible">True</property>
@@ -1478,6 +1481,9 @@ See http://standards.freedesktop.org/desktop-entry-spec/desktop-entry-spec-lates
     <property name="window_position">center-on-parent</property>
     <property name="destroy_with_parent">True</property>
     <property name="type_hint">dialog</property>
+    <child type="titlebar">
+      <placeholder/>
+    </child>
     <child internal-child="vbox">
       <object class="GtkBox" id="dialog-vbox2">
         <property name="can_focus">False</property>
@@ -1652,6 +1658,9 @@ See http://standards.freedesktop.org/desktop-entry-spec/desktop-entry-spec-lates
     <property name="destroy_with_parent">True</property>
     <property name="type_hint">dialog</property>
     <property name="has_resize_grip">True</property>
+    <child type="titlebar">
+      <placeholder/>
+    </child>
     <child internal-child="vbox">
       <object class="GtkBox">
         <property name="can_focus">False</property>
