Enable focus on filename to enable copy functions

--- a/data/ui/MenulibreWindow.ui
+++ b/data/ui/MenulibreWindow.ui
@@ -705,7 +705,7 @@
                         <child>
                           <object class="GtkLabel" id="label_Filename">
                             <property name="visible">True</property>
-                            <property name="can-focus">False</property>
+                            <property name="can-focus">True</property>
                             <property name="label" context="Template only, no translation needed.">Filename</property>
                             <property name="selectable">True</property>
                             <property name="ellipsize">middle</property>
