--- a/data/ui/ExecEditor.ui
+++ b/data/ui/ExecEditor.ui
@@ -137,6 +137,8 @@
           <object class="GtkEntry" id="env_var_entry">
             <property name="visible">True</property>
             <property name="can-focus">True</property>
+            <property name="has-focus">True</property>
+            <property name="double-buffered">False</property>
             <property name="caps-lock-warning">False</property>
             <property name="input-hints">GTK_INPUT_HINT_UPPERCASE_CHARS | GTK_INPUT_HINT_NO_EMOJI | GTK_INPUT_HINT_NONE</property>
           </object>
@@ -164,6 +166,7 @@
           <object class="GtkEntry" id="env_val_entry">
             <property name="visible">True</property>
             <property name="can-focus">True</property>
+            <property name="double-buffered">False</property>
           </object>
           <packing>
             <property name="left-attach">1</property>
@@ -491,6 +494,7 @@
   </object>
   <object class="GtkDialog" id="ExecEditorDialog">
     <property name="can-focus">False</property>
+    <property name="title" translatable="yes">Command Editor</property>
     <property name="type-hint">dialog</property>
     <child internal-child="vbox">
       <object class="GtkBox" id="exec_editor_box">
@@ -854,6 +858,10 @@
         </child>
       </object>
     </child>
+    <action-widgets>
+      <action-widget response="-6">exec_editor_cancel</action-widget>
+      <action-widget response="-10">exec_editor_apply</action-widget>
+    </action-widgets>
   </object>
   <object class="GtkSizeGroup" id="field_codes">
     <widgets>
