--- a/data/ui/ExecEditor.ui
+++ b/data/ui/ExecEditor.ui
@@ -58,12 +58,14 @@
           <object class="GtkButtonBox" id="command_buttons">
             <property name="visible">True</property>
             <property name="can-focus">False</property>
+            <property name="hexpand">True</property>
             <property name="spacing">6</property>
-            <property name="layout-style">end</property>
+            <property name="layout-style">expand</property>
             <child>
               <object class="GtkFileChooserButton" id="command_file_chooser">
                 <property name="visible">True</property>
                 <property name="can-focus">False</property>
+                <property name="hexpand">True</property>
                 <property name="title" translatable="yes"/>
               </object>
               <packing>
@@ -76,19 +78,22 @@
               <object class="GtkComboBox" id="command_app_chooser">
                 <property name="visible">True</property>
                 <property name="can-focus">False</property>
+                <property name="hexpand">True</property>
                 <property name="model">application_list</property>
                 <property name="active">0</property>
                 <property name="id-column">1</property>
                 <child>
-                  <object class="GtkCellRendererText" id="app_label"/>
-                  <attributes>
-                    <attribute name="text">0</attribute>
-                  </attributes>
-                </child>
-                <child>
                   <object class="GtkCellRendererPixbuf" id="app_icon"/>
                   <attributes>
                     <attribute name="gicon">2</attribute>
+                  </attributes>
+                </child>
+                <child>
+                  <object class="GtkCellRendererText" id="app_label">
+                    <property name="ellipsize">end</property>
+                  </object>
+                  <attributes>
+                    <attribute name="text">0</attribute>
                   </attributes>
                 </child>
               </object>
