--- a/data/ui/ExecEditor.ui
+++ b/data/ui/ExecEditor.ui
@@ -793,7 +793,7 @@
                   <object class="GtkImage" id="hint_cmd_img">
                     <property name="visible">True</property>
                     <property name="can-focus">False</property>
-                    <property name="icon-name">dialog-error</property>
+                    <property name="icon-name">gtk-cancel</property>
                   </object>
                   <packing>
                     <property name="left-attach">0</property>
@@ -815,7 +815,7 @@
                   <object class="GtkLabel" id="hint_env_label">
                     <property name="visible">True</property>
                     <property name="can-focus">False</property>
-                    <property name="label" translatable="yes">No environment variables</property>
+                    <property name="label" translatable="yes">No environment variable errors</property>
                     <property name="xalign">0</property>
                   </object>
                   <packing>
