--- a/data/ui/MenulibreWindow.ui
+++ b/data/ui/MenulibreWindow.ui
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.38.2 -->
+<!-- Generated with glade 3.40.0 -->
 <interface>
   <requires lib="gtk+" version="3.16"/>
   <object class="GtkMenu" id="add_popup_menu">
@@ -752,11 +752,22 @@
                                             <property name="halign">start</property>
                                             <property name="popup">icon_select_menu</property>
                                             <child>
-                                              <object class="GtkImage" id="image_Icon">
+                                              <object class="GtkOverlay" id="icon_overlay">
+                                                <property name="width-request">48</property>
+                                                <property name="height-request">48</property>
                                                 <property name="visible">True</property>
                                                 <property name="can-focus">False</property>
-                                                <property name="pixel-size">48</property>
-                                                <property name="icon-name">applications-other</property>
+                                                <child>
+                                                  <object class="GtkImage" id="image_Icon">
+                                                    <property name="visible">True</property>
+                                                    <property name="can-focus">False</property>
+                                                    <property name="pixel-size">48</property>
+                                                    <property name="icon-name">applications-other</property>
+                                                  </object>
+                                                  <packing>
+                                                    <property name="index">-1</property>
+                                                  </packing>
+                                                </child>
                                               </object>
                                             </child>
                                           </object>
@@ -1802,6 +1813,16 @@ Please investigate these problems with the associated package maintainer.</prope
         </child>
       </object>
     </child>
+  </object>
+  <object class="GtkImage" id="overlay_icon">
+    <property name="width-request">16</property>
+    <property name="height-request">16</property>
+    <property name="can-focus">False</property>
+    <property name="no-show-all">True</property>
+    <property name="xalign">1</property>
+    <property name="yalign">1</property>
+    <property name="icon-name">dialog-warning</property>
+    <property name="use-fallback">True</property>
   </object>
   <object class="GtkScrolledWindow" id="page_advanced">
     <property name="visible">True</property>
